# B-CPP-500-LIL-5-2-rtype-ewen.sellitto

./: .clang-format  .gitignore  CMakeLists.txt  README.md  r-type
.github/workflows/: build.yml  doxygen.yml
docs/: ECS.md  Engine.md  NetworkProtocol.md  R-Type.md
docs/Engine/: Components.md  Systems.md
docs/R-Type/: Components.md  Events.md  GameData.md  GameWorld.md  Subscribers.md  Systems.md
include/: r-type.hpp
include/ECS/: Clock.hpp  Components.hpp  Entity.hpp  EventSubscriber.hpp  System.hpp  Utilities.hpp  World.hpp
include/Engine/: Engine.hpp
include/Engine/Components/: Animation.component.hpp  BaseBullet.component.hpp  Bullet.component.hpp  Button.component.hpp  CheckBox.component.hpp  Collision.component.hpp  Cursor.component.hpp  Drawable.component.hpp  Enemy.component.hpp  EnemyAttack.component.hpp  EnemyMovements.component.hpp  EnemyQueue.component.hpp  ExcludeCollision.component.hpp  LayeredAnimation.component.hpp  LayeredRenderable.component.hpp  Link.component.hpp  Menu.component.hpp  Missile.component.hpp  Moving.component.hpp  Music.component.hpp  Options.component.hpp  Parallax.component.hpp  Player.component.hpp  Position.component.hpp  Renderable.component.hpp  Score.component.hpp  Speed.component.hpp  Text.component.hpp  TextInput.component.hpp  Type.component.hpp  View.component.hpp  Window.component.hpp  WorldMoveProgress.component.hpp
include/Engine/Events/: Collision.event.hpp  KeyPressed.event.hpp  KeyReleased.event.hpp
include/Engine/Server/: ClientInfo.hpp  Network.hpp  WaitingRoom.hpp
include/Engine/Systems/: Bullets.system.hpp  Enemy.system.hpp  Inputs.system.hpp  MovePlayer.system.hpp  Options.system.hpp  Parallax.system.hpp  Physics.system.hpp  Renderer.system.hpp  Server.system.hpp  Sound.system.hpp  UI.system.hpp  WaitingRoom.system.hpp  WorldMove.system.hpp
include/GameWorld/: Entities.hpp  GameWorld.hpp  Subscribers.hpp  Systems.hpp
include/R-Type/: sprites.hpp
include/R-Type/Components/: BaseBullet.component.hpp  Booster.component.hpp  BoosterActive.component.hpp  DeathAnimation.component.hpp  Enemy.component.hpp  EnemyAttack.component.hpp  EnemyMovements.component.hpp  EnemyQueue.component.hpp  Health.component.hpp  Missile.component.hpp  Player.component.hpp  WeaponType.component.hpp
include/R-Type/Events/: EnnemyDeath.event.hpp
include/R-Type/GameWorld/: EnemyMakers.hpp  Entities.hpp  GameWorld.hpp  Subscribers.hpp  Systems.hpp  Waves.hpp
include/R-Type/Subscribers/: Collision.subscriber.hpp  EnnemyDeath.subscriber.hpp  Keyboard.subscriber.hpp  PlayerMove.subscriber.hpp  ShootPlayer.subscriber.hpp
include/R-Type/Systems/: Booster.system.hpp  Bullets.system.hpp  DeathAnimation.system.hpp  Enemy.system.hpp  Health.system.hpp  MovePlayer.system.hpp
include/R-Type/gameData/: EnemyData.hpp
include/Server/: ClientInfo.hpp  Network.hpp  Server.hpp  WaitingRoom.hpp
include/public/: AvailableComponents.hpp  ComponentsType.hpp
include/rtype/: sprites.hpp
scripts/: commit-msg  init.sh  pre-commit
src/: Server.cpp  main.cpp  test.cpp
src/Engine/: Engine.cpp
src/Engine/Server/: Network.cpp  ServerHandler.cpp
src/Engine/Server/Packets/: HandlePackets.cpp  ReceivePackets.cpp  SendPackets.cpp
src/Engine/Server/Packets/Serialization/: Deserialize.cpp  Serialize.cpp
src/Engine/Systems/: Animation.system.cpp  Bullets.system.cpp  Enemy.system.cpp  Inputs.system.cpp  MovePlayer.system.cpp  Options.system.cpp  Parallax.system.cpp  Physics.system.cpp  Renderer.system.cpp  Renderer.systems.cpp  Server.systems.cpp  Sound.system.cpp  UI.system.cpp  WaitingRoom.systems.cpp  WorldMove.system.cpp
src/R-Type/: EnemyMakers.cpp
src/R-Type/Server/: Network.cpp
src/R-Type/Systems/: Booster.system.cpp  Bullets.system.cpp  DeathAnimation.system.cpp  Enemy.system.cpp  Health.system.cpp  MovePlayer.system.cpp
